--- a/src/main/resources/templates/github.html
+++ b/src/main/resources/templates/github.html
@@ -5,7 +5,8 @@
     <title>Github登录</title>
 </head>
 <body>
-    <a href="https://github.com/login/oauth/authorize?client_id=da8c28bcfd991b5b2774&state=STATE&redirect_uri=http://localhost:8080/main.html;">
+    <!-- client_id记得改成自己的 -->
+    <a href="https://github.com/login/oauth/authorize?client_id=xxxxxxxxxxxxxxxxxx&state=STATE&redirect_uri=http://localhost:8080/main.html;">
         <h1>git</h1>
     </a>
 </body>
